[package]
name = "grab-xkcd"
version = "0.1.0"
authors = ["Alexandros Bantis <ambantis@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.32"
clap = "3.0.0-beta.2"
reqwest = { version = "0.10.8", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.1.1"
